// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Success renders content tailored to Family (Bonding Adoption) 1`] = `
<Fragment>
  <Title>
    Your family leave application was submitted successfully
  </Title>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <UserFeedback />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Adoption) 2`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your leave application will be sent to your employer for review. They have 10 days to provide feedback.
  </li>
   
  <li
    key="3"
  >
    Once your employer has reviewed your application, we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
   
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 1`] = `
<Fragment>
  <Title>
    Your family leave application was submitted successfully
  </Title>
  <div
    className="measure-6"
  >
    <Alert
      state="warning"
    >
      After your child arrives in your home, you will need to upload, mail, or fax a document that shows your child’s placement date.
    </Alert>
    <Heading
      level="2"
    >
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "bondingAdoptFosterFuture",
        }
      }
    />
    <UserFeedback />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Future Adoption) 2`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your leave application will be sent to your employer for review. They have 10 days to provide feedback.
  </li>
   
  <li
    key="3"
  >
    Once you’ve provided proof of placement, we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
   
  <li
    key="7"
  >
    If you need to change your leave dates because your child arrived in your home earlier or later than expected, you must call the DFML Contact Center at (833) 344‑7365.
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 1`] = `
<Fragment>
  <Title>
    Your family leave application was submitted successfully
  </Title>
  <div
    className="measure-6"
  >
    <Alert
      state="warning"
    >
      After your child is born, you will need to upload, mail, or fax a document that shows your child’s birthdate.
    </Alert>
    <Heading
      level="2"
    >
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "bondingNewbornFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        If you gave birth, you may also be eligible for paid medical leave.
      </Heading>
      <p>
        You can take up to 20 weeks of paid medical leave if you're unable to work during your pregnancy and to recover from childbirth. Your health care provider determines how much medical leave you will need. You must create a separate leave application if you need to take medical leave.
      </p>
    </div>
    <UserFeedback />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Future Newborn) 2`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your leave application will be sent to your employer for review. They have 10 days to provide feedback.
  </li>
   
  <li
    key="3"
  >
    Once you’ve provided proof of birth, we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
   
  <li
    key="7"
  >
    If you need to change your leave dates because your child was born earlier or later than expected, you must call the DFML Contact Center at (833) 344‑7365.
  </li>
</ul>
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 1`] = `
<Fragment>
  <Title>
    Your family leave application was submitted successfully
  </Title>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        If you gave birth, you may also be eligible for paid medical leave.
      </Heading>
      <p>
        You can take up to 20 weeks of paid medical leave if you're unable to work during your pregnancy and to recover from childbirth. Your health care provider determines how much medical leave you will need. You must create a separate leave application if you need to take medical leave.
      </p>
    </div>
    <UserFeedback />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Family (Bonding Newborn) 2`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your leave application will be sent to your employer for review. They have 10 days to provide feedback.
  </li>
   
  <li
    key="3"
  >
    Once your employer has reviewed your application, we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
   
</ul>
`;

exports[`Success renders content tailored to Medical (Not pregnant) 1`] = `
<Fragment>
  <Title>
    Your medical leave application was submitted successfully
  </Title>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <UserFeedback />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Medical (Not pregnant) 2`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your leave application will be sent to your employer for review. They have 10 days to provide feedback.
  </li>
   
  <li
    key="3"
  >
    Once your employer has reviewed your application, we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
   
</ul>
`;

exports[`Success renders content tailored to Medical (Pregnant) 1`] = `
<Fragment>
  <Title>
    Your medical leave application was submitted successfully
  </Title>
  <div
    className="measure-6"
  >
    <Heading
      level="2"
    >
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "leaveNotInFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        You can also apply for paid family leave.
      </Heading>
      <p>
        You can take up to 12 weeks of paid family leave to bond with your child after your medical leave ends. You do not need to take this leave all at once. You must create a separate leave application if you want to take family leave.
      </p>
    </div>
    <UserFeedback />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Medical (Pregnant) 2`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your leave application will be sent to your employer for review. They have 10 days to provide feedback.
  </li>
   
  <li
    key="3"
  >
    Once your employer has reviewed your application, we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
   
</ul>
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 1`] = `
<Fragment>
  <Title>
    Your medical leave application was submitted successfully
  </Title>
  <div
    className="measure-6"
  >
    <Alert
      state="warning"
    >
      You must call the DFML Contact Center at (833) 344‑7365 once your medical leave begins. We can’t approve your application until we hear from you.
    </Alert>
    <Heading
      level="2"
    >
      What happens next
    </Heading>
    <Trans
      components={
        Object {
          "li": <li />,
          "ul": <ul
            className="usa-list"
          />,
        }
      }
      i18nKey="pages.claimsSuccess.adjudicationProcess"
      tOptions={
        Object {
          "context": "medicalPregnantFuture",
        }
      }
    />
    <div
      className="padding-top-2 margin-top-2"
    >
      <Heading
        level="2"
      >
        You can also apply for paid family leave.
      </Heading>
      <p>
        You can take up to 12 weeks of paid family leave to bond with your child after your medical leave ends. You do not need to take this leave all at once. You must create a separate leave application if you want to take family leave.
      </p>
    </div>
    <UserFeedback />
    <ButtonLink
      className="margin-top-4"
      href="/applications"
    >
      Return to applications
    </ButtonLink>
  </div>
</Fragment>
`;

exports[`Success renders content tailored to Medical (Pregnant, applying in advance) 2`] = `
<ul
  className="usa-list"
  key="0"
>
   
  <li
    key="1"
  >
    Your leave application will be sent to your employer for review. They have 10 days to provide feedback.
  </li>
   
  <li
    key="3"
  >
    When your leave begins, call the DFML Contact Center at (833) 344‑7365 to tell us. Then we’ll confirm your eligibility and make sure that your documents are valid.
  </li>
   
  <li
    key="5"
  >
    After we’ve made a decision, you’ll receive an email notification with a link to details about the decision.
  </li>
   
</ul>
`;
